k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meowdel
  labels:
    app: meowdel
    environment: production
